--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
 		<link rel="icon" type="image/x-icon" href="./favicon.ico">
